Migration stuff in progress... (all tests of all packages: OK).